# oz_union_16_be_Team2

./: .dockerignore  .gitignore  .gitmessage.txt  Makefile  README.md  conftest.py  dummy.txt  entrypoint.sh  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  deploy.yml  discord_noti.yml
apps/core/: __init__.py  choices.py  common_serializers.py  exception_handler.py  exceptions.py  middleware.py  permission.py  response.py
apps/core/admin/: __init__.py  base_views.py  permissions.py
apps/core/tests/: test_exception_handler.py
apps/goals/: apps.py  models.py  tests.py  urls.py
apps/goals/migrations/: 0001_initial.py  0002_delete_roundgoal.py  0002_initial.py
apps/goals/serializers/: achievement.py  goal_create.py  ranking.py
apps/goals/services/: achievement.py  ranking.py  (+2 more)
apps/interactions/: apps.py  models.py
apps/posts/: admin.py  admin_urls.py  apps.py  models.py  tag_urls.py  urls.py
apps/reports/: admin.py  admin_urls.py  apps.py  models.py  test_admin_post_delete_views.py  test_admin_report_views.py
apps/stats/: apps.py
apps/users/: admin.py  admin_urls.py  apps.py  constants.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
apps/votes/: apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
config/: settings.py  urls.py
config/settings/: base.py  dev.py  prod.py
envs/: .env.example  .env.prod.example
resource/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
resource/nginx/: nginx.conf  nginx.http-only.conf
templates/admin/: fixed_change_list.html  index.html
(+164 files in other folders)
