[project]
name = "project-templete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.1",
    "django>=6.0.4",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=25.3.0",
    "isort>=8.0.1",
    "psycopg[binary]>=3.3.3",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "tree>=0.2.4",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]>=6.0.2",
    "mypy>=1.20.0",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-third-party = ["django", "rest_framework", "drf_spectacular"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
